--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/font-icons/flaticon.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
